# opentelemetry-workspace

./: .gitignore  .gitmodules  Makefile.toml  README.md  collector-config.yaml
python/rest/: main.py  otel.py  pyproject.toml
rust/client/: Cargo.toml  query.gql  schema.json
rust/client/src/: main.rs
rust/client/src/scenarios/: graphql.rs  healthcheck.rs  mod.rs  rest.rs
rust/graphql/: Cargo.toml
rust/graphql/src/: client.rs  handlers.rs  lib.rs  main.rs  otel.rs  schema.rs  trace_layer.rs
rust/queue/: Cargo.toml
rust/queue/examples/: consumer.rs  producer.rs
rust/queue/src/: lib.rs
typescript/ui/: README.md  codegen.ts  index.html  package.json
typescript/ui/src/: App.tsx  main.tsx  otel.ts
typescript/ui/src/__generated__/: gql.ts  graphql.ts
typescript/ui/src/componens/: button.tsx
