[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.17.0"
goose-eggs = "0.5.1"
graphql_client = "0.12.0"
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros"] }
