[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7", features = ["tracing"] }
async-graphql-axum = "5.0.7"
axum = "0.6.17"
opentelemetry = "=0.18.0"
tokio = { version = "1.28.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
] }
tracing = "0.1.38"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.17"
