[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-graphql = { version = "5.0.7", features = ["tracing"] }
async-graphql-axum = "5.0.7"
axum = "0.6.17"
opentelemetry = { version = "=0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "=0.11.0"
opentelemetry-semantic-conventions = "=0.10.0"
reqwest = "0.11.17"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.38"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.17"
