[package]
name = "queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
futures = "0.3.28"
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3"
opentelemetry = { version = "=0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "=0.11.0"
opentelemetry-semantic-conventions = "=0.10.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
